Fix video show gradient overlap

--- a/app/assets/stylesheets/components/browse/show.scss
+++ b/app/assets/stylesheets/components/browse/show.scss
@@ -1,4 +1,4 @@
-.after-hero > ul > div > .videoShow {
+.videoShow {
     height: 450px;
     width: 100%;
     display: flex;
