--- a/app/assets/stylesheets/footer_header/header.scss
+++ b/app/assets/stylesheets/footer_header/header.scss
@@ -33,6 +33,7 @@
     align-items: center;
     margin-left: 50px;
     margin-right: 75px;
+    cursor: pointer;
 }
 
 .main-header > nav > div:first-child {
